--- a/index.html
+++ b/index.html
@@ -79,11 +79,10 @@
       </div>
     </main>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Kallagunta Sai Pavan</a>.
-    </div>
+    <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a
+      href="https://github.com//KallaguntaSP/Result-summary-component/main/index.html">Kallagunta Sai Pavan</a>.
+  </footer>
   </body>
 </html>
